[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/ball_indic.svg" type="Texture" id=1]
[ext_resource path="res://art/volleyball_small_resize.png" type="Texture" id=2]
[ext_resource path="res://src/Ball/RigidBall.gd" type="Script" id=3]
[ext_resource path="res://src/Ball/AudioStreamPlayer.gd" type="Script" id=5]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]
radius = 25.0

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[node name="RigidBall" type="RigidBody2D"]
pause_mode = 1
collision_layer = 2
collision_mask = 5
mass = 5.0
physics_material_override = SubResource( 1 )
gravity_scale = 5.0
continuous_cd = 2
contacts_reported = 2
contact_monitor = true
script = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -123.58 )
rect = Rect2( -25, -25, 50, 50 )

[node name="OffscreenIndicator" type="Node2D" parent="."]
visible = false

[node name="Outline" type="Sprite" parent="OffscreenIndicator"]
position = Vector2( 0, 36.7606 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Ball" type="Sprite" parent="OffscreenIndicator"]
position = Vector2( 0, 36.7606 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FloorDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetector"]
shape = SubResource( 3 )

[node name="FloorTimer" type="Timer" parent="FloorDetector"]
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 5 )
